# controller_mission

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
cfg/: SquareTest.cfg
config/: alpha.yml  bravo.yml  charlie.yml  cvm.yml  delta.yml  final.yml  test01.yml  test_move.yml
config/2018/: alpha.yml  bravo.yml  delta.yml
config/2019/: Param_cvm.yml  param_alpha.yml  param_beta.yml  param_charlie.yml  param_cvm.yml  param_delta.yml  param_final.yml
launch/: missionExecutor.launch  reportLogger.launch
missions/: Align_Bottom_w_path.yml  CtrlSpeed.yml  CtrlSpeed_position.yml  Down_Drop_Up.yml  Find_bat_wolf.yml  Find_ghost.yml  Formation_t2.yml  Foward_W_Style.yml  Gate_With_Style.yml  Get_Bag_Ghost.yml  Mission1.yml  MoveX_RotYaw.yml  Play_Grab.yml  PreQualif_2019.yml  SpeedQualif2019.yml  Speed_Control.yml  Start_Find_Ghost.yml  SubMission.yml  TestAligmentWithDistance.yml  TestMvtSpeed.yml  TestSwitchMode.yml  Test_Switch.yml  Test_align_path.yml  Test_front _align_red_buoy.yml  Test_rosparam.yml  Torp_Wait_Torp.yml  alignBuoy.yml  align_foward_bottom.yml  allojessaye.yml  arm_test.yml  blind_hit.yml  concurence_bat_path.yml  concurren.yml  concurrence.yml  coumarc_movex_decoupled.yml  coumarc_save_orientation.yml  coumarc_test_buoy_red.yml  coumarc_test_dans_le_noir.yml  coumarc_test_speed_position.yml  coumarc_test_states_with_control_mode.yml  (+78 more)
missions/2018/: AlignPath.yml  TestDecoupled.yml  qualification01.yml
missions/2019/: demi_final.yml  demi_one_bottom.yml  gate_speed_grab.yml  hydro_double_vampire.yml  infinit_hydro.yml  infinit_hydro_old.yml  mission_sequence_compe.yml  test_hydro_pos.yml
missions/AD/: test_align.yml  test_align_bottom.yml  test_align_bottom_good.yml
missions/demo/: demo_align_roulette.yml  ram_dice_1.yml
missions/final_mission/: BigCrab.yml  BigMission.yml  Buoys.yml  DoBin.yml  DoBinSimple.yml  DoTorpido.yml  DoTower.yml  GatePathOfBuoy.yml  Hydrophone.yml  PetitHydro.yml  bigFence.yml  bigHydro.yml  fence.yml  findBuoyRed.yml  findFencePath.yml  gate_for_fence.yml  simpleTower.yml  simple_hydro.yml
missions/mapping/: confirm.yml  confirmBuoys.yml  findObject.yml  getAndGoBuoys.yml  getBuoy.yml  getObjective.yml  gotoObject.yml  openSensors.yml  recovery.yml  resetObjective.yml  saveAndGet.yml  saveSafe.yml
missions/mission/: FindAndDoDroppers.yml  FindStaticBuoy.yml  GateBuoysFence.yml  GatePathBuoys.yml  PathBuoysRedGreen.yml  PathFence.yml  PathToBuoyRed.yml  align.yml  alignFence.yml  buoyToFence.yml  buoysMission.yml  chargeGreen.yml  chargeRed.yml  chargeRedAndGreen.yml  chargeRedForwardFirst.yml  droppers.yml  fence.yml  findAndAlignPath.yml  findAndChargeRed.yml  findAndChargeRedGreen.yml  findBin.yml  findBuoyGreen.yml  findBuoyRed.yml  findFence.yml  findHitBin.yml  findNextBouy.yml  findNextBuoy.yml  findNextBuoyGreen.yml  findNextBuoyRed.yml  findNextGreen.yml  findRedByCrab.yml  forwardAndBuoyRed.yml  gate.yml  gateToPathToBuoys.yml  missionBuoyRed.yml  pathToBuoy.yml  pathToBuoyRedAndGreen.yml  pathToFence.yml  simpleGate.yml  test_vision.yml
missions/navigation/: CtrlSpeed.yml  GotoNextPAth.yml  crab_walk.yml  crabtest.yml  el_gran_fuego.yml  forward.yml  gate.yml  gateForBuoy.yml  goBackRelative.yml  goFrontRelative.yml  goLeftRelative.yml  goRightRelative.yml  moveGlobal.yml  moveGlobalHeading.yml  moveRelative.yml  pushToBuoy.yml  ram.yml  ramBin.yml  reachFenceWithStyle.yml  simple_crab_walk.yml  simple_sweep.yml  square.yml  square_global.yml  (+5 more)
script/: post_mission_report.py
srv/: CurrentMission.srv  GetPositionObject.srv  Position.srv  ReceivedMission.srv  SendMission.srv  SucceedButton.srv  TrustingPositionObject.srv
test/: __init__.py  test_alignVision.py  test_main.py
(+308 files in other folders)
